# Simple_Rust_HTTP

./: Cargo.toml  LICENSE.md
src/: main.rs
src/http/: mod.rs  request.rs  response.rs  routes.rs  server.rs  stream.rs
