[package]
name = "http"
version = "0.1.0"
authors = ["Tucker Sneed <public.tuckersn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version="1.7.0", features=["attributes"] }
bytes = { version = "0.5", features = ["serde"] }
futures = "0.3.8"
serde = { version="1.0.117", features=["derive", "alloc"] }
serde_json = "1.0.59"
